--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ws_ROS2_ursim/src/ur_simulation_gz"]
 	path = ws_ROS2_ursim/src/ur_simulation_gz
 	url = https://github.com/UniversalRobots/Universal_Robots_ROS2_GZ_Simulation.git
+[submodule "ws_ROS2_ursim/src/Universal_Robots_ROS2_Driver"]
+	path = ws_ROS2_ursim/src/Universal_Robots_ROS2_Driver
+	url = https://github.com/UniversalRobots/Universal_Robots_ROS2_Driver.git
